# rz-libmc7

./: .clang-format  .gitignore  Makefile  README.md  main.c  meson.build  meson_options.txt  simatic.c  simatic.h  testsuite  testsuite.c
.circleci/: config.yml
.github/workflows/: ci.yaml  linter.yml
.reuse/: dep5
include/: #simatic_types.h#  .#simatic_types.h  simatic.h  simatic_types.h
r2-simatic-s7/: Makefile  plugin-anal.c  plugin-asm.c  plugin-bin.c
src/: libmc7.c  plugin_analysis.c  plugin_arch.c  plugin_asm.c  plugin_bin.c  simatic.c
unit/: test_simatic.c
